tests/src/tests/fail/no-struct.rs
use async_generic::async_generic;

#[async_generic]
struct Struct {}

#[async_generic]
impl Struct {}

fn main() {}
